to fix z-index header

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -17,11 +17,8 @@
 	// .header__container
 
 	&__container {
-		z-index: 5;
+		z-index: 4;
 		position: relative;
-		@media (max-width: $tablet) {
-			// padding: rem(0) rem(10);
-		}
 	}
 
 	// .header__menu
@@ -78,6 +75,7 @@
 .menu {
 	z-index: 5;
 	height: rem(102);
+	position: relative;
 	@media (max-width: $tablet) {
 		position: fixed;
 		z-index: 6;
@@ -89,16 +87,6 @@
 		align-items: center;
 		padding: rem(0) rem(24);
 	}
-	._header-scroll & {
-		position: fixed;
-		width: 100%;
-		max-width: rem(1110);
-		top: -100%;
-	}
-	._header-show & {
-		top: 0;
-		transition: top 0.3s ease 0s;
-	}
 	&::before {
 		content: "";
 		position: fixed;
@@ -107,17 +95,27 @@
 		top: -100%;
 		left: 0;
 		background-color: rgba(51, 51, 51, 0.87);
-		z-index: 7;
 	}
-	.menu-open &::before {
-		background-color: #333333;
+	._header-scroll & {
+		position: fixed;
+		width: 100%;
+		max-width: rem(1110);
+		top: -100%;
+	}
+	._header-show & {
+		z-index: 6;
 		top: 0;
+		transition: top 0.3s ease 0s;
 	}
 	._header-show &::before {
 		top: 0;
 		transition: top 0.3s ease 0s;
 	}
-
+	.menu-open &::before {
+		background-color: #333333;
+		top: 0;
+		z-index: 6;
+	}
 	//.menu__mobile-logo
 	&__mobile-logo {
 		display: none;
